# static

./: CNAME  README.md  bus_data_v3.json  curriculum.py  feed_source.json  main.py  pyproject.toml  rss-config.yaml  rss.py  test_utils_parsing.py
.github/workflows/: build.yml  ruff.yml
api/course/: 100003  100004  100005  100008  100010  100013  100016  100017  100020  100025  100027  100031  100032  100034  100036  100039  100040  100041  100043  100044  100048  100050  100052  100054  100055  100057  100060  100066  100067  100068  100071  100073  100074  100075  100076  100077  100078  100080  100082  100083  (+43157 more)
curriculum/: semesters.json
curriculum/101/: 120151.json  120153.json  120158.json  120183.json  120187.json  120192.json  120193.json  120195.json  120198.json  120201.json  120203.json  120206.json  120207.json  120208.json  120209.json  120212.json  120213.json  120215.json  120216.json  120218.json  120219.json  120224.json  120225.json  120227.json  120228.json  120230.json  120231.json  120236.json  121750.json  121937.json  121938.json  121939.json  121940.json  courses.json
curriculum/11/: 100588.json  100807.json  100808.json  101067.json  101069.json  101075.json  101079.json  101080.json  101081.json  101082.json  101083.json  101086.json  101087.json  101088.json  101089.json  101090.json  101641.json  101642.json  101647.json  101649.json  101651.json  101654.json  101655.json  101658.json  102108.json  102110.json  102111.json  102112.json  102115.json  102118.json  102434.json  102726.json  102792.json  102810.json  102826.json  102827.json  102871.json  102875.json  102880.json  102918.json  (+365 more)
curriculum/12/: 100181.json  100186.json  100187.json  100189.json  100193.json  100195.json  100197.json  100198.json  100200.json  (+478 more)
models/: course.py  exam.py  lecture.py  semester.py
rss/: life-ustc.xml  tj_ustc.xml  ustc_news.xml  ustc_teach.xml
scripts/: README.md  submit-via-webhook.py
src/: __init__.py  curriculum.py  guesses.py  rss.py  sqlite_store.py  upstream_contracts.py  young.py
static/: feed_source.json
tests/: test_auth.py  test_curriculum.py  test_main.py  test_rss.py  test_sqlite_store.py  test_young.py
tools/: bus_data_gen.py  sqlite_snapshot.py  upstream_schemas.py
utils/: auth.py  catalog.py  jw.py  tj_rss.py  tools.py
(+115696 files in other folders)
