[project]
name = "static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "feedgen>=1.0.0",
    "feedgenerator>=2.2.1",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "jsonpickle>=4.1.1",
    "patchright>=1.55.2",
    "pydantic>=2.12.3",
    "pyotp>=2.9.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "ruff>=0.14.14",
]

[project.scripts]
static-build = "main:main"

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = ["build", "static"]
lint.select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "SIM",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"src/models/*.py" = ["N815"]
"src/utils/catalog.py" = ["N806"]
"src/utils/jw.py" = ["N802", "N806", "N816"]
"src/utils/tj_rss.py" = ["N802"]
"tools/bus_data_gen.py" = ["N816"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
