[project]
name = "static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedgen>=1.0.0",
    "feedgenerator>=2.2.1",
    "feedparser>=6.0.12",
    "html2text>=2025.4.15",
    "patchright>=1.58.2",
    "pydantic>=2.12.5",
    "pyotp>=2.9.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[project.scripts]
static-build = "main:main"

[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = ["build", "static"]
lint.select = [
    "B",
    "E",
    "F",
    "I",
    "N",
    "SIM",
    "UP",
]

[tool.ruff.lint.per-file-ignores]
"src/models/*.py" = ["N815"]
"src/utils/catalog.py" = ["N806"]
"src/utils/jw.py" = ["N802", "N806", "N816"]
"src/utils/tj_rss.py" = ["N802"]
"tools/bus_data_gen.py" = ["N816"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
